bk_ida/gccida/g1/emit_no_conflict_block
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3188:4: error: expected ';' after expression
rtx v9; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3188:5: error: use of undeclared identifier 'v9'
rtx v9; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3189:4: error: expected ';' after expression
rtx v10; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3189:5: error: use of undeclared identifier 'v10'
rtx v10; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3194:4: error: expected ';' after expression
rtx v16; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3194:5: error: use of undeclared identifier 'v16'
rtx v16; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3198:4: error: expected ';' after expression
rtx last_insn; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3198:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3201:4: error: expected ';' after expression
rtx v23; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3201:5: error: use of undeclared identifier 'v23'
rtx v23; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3216:1: error: use of undeclared identifier 'v9'
v9 = insns; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3219:1: error: use of undeclared identifier 'v16'
v16 = v9; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3219:7: error: use of undeclared identifier 'v9'
v16 = v9; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3220:1: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3220:6: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3221:27: error: use of undeclared identifier 'v16'
reg_note = find_reg_note( v16, REG_LIBCALL, 0LL); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3223:14: error: use of undeclared identifier 'v16'
remove_note( v16, reg_note); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3224:22: error: use of undeclared identifier 'v16'
v18 = find_reg_note( v16, REG_RETVAL, 0LL); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/optabs.c:3226:14: error: use of undeclared identifier 'v16'
remove_note( v16, v18); 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_no_conflict_block/src/obj/optabs.o] Error 1
